Add enchanted crop tier items and integrate loot and market logic